2002-09-13  Andreas Buesching  <crunchy@tzi.de>

	* mpiosh/callback.c (mpiosh_callback_get, mpiosh_callback_put) 
	(mpiosh_callback_del): using mpiosh_cancel to abort operation

	* mpiosh/mpiosh.c: changed handling of SIGINT. The global variable
	mpiosh_cancel indicates the interrupt.

	* mpiosh/callback.c (mpiosh_cmd_help): add support for
	arguments. just prints help about specified commands.

	* mpiosh/mpiosh.c: add new command lpwd

2002-09-13  Markus Germeier  <mager@informatik.uni-bremen.de>

	* mpiosh/callback.c (mpiosh_cmd_put, mpiosh_cmd_del) 
	(mpiosh_cmd_mdel, mpiosh_cmd_mput): use mpio_sync

	* libmpio/mpio.c (mpio_file_get, mpio_file_put) 
	(mpio_memory_format, mpio_file_del): add code to handle abort 
	"signal" from user interface
	(mpio_sync): added function

2002-09-12  Andreas Buesching  <crunchy@tzi.de>

	* mpiosh/mpiosh.c (mpiosh_command_split): 
	function added to support command sequences separated by ';'
	changed mpiosh_cmd_t structure, containing help string and
	argument information

	* mpiosh/callback.h, mpiosh/callback.c ():
	new files containing callback functions of shell commands
	(MPIOSH_CHECK_CONNECTION_OPEN, MPIOSH_CHECK_CONNECTION_CLOSED) 
	(MPIOSH_CHECK_ARG): macros for checking status of connection to
	player

2002-09-11  Markus Germeier  <mager@tzi.de>

	* libmpio/mpio.c (mpio_file_put,mpio_file_get): 
	  set timestamps on files correct
	* libmpio/directory.c (mpio_dentry_put): 
	  write correct 8.3 filenames into directory
	  (mpio_dentry_put): 
	  fixed handling of time stamps with a "little" help
	  from the current mtools distribution
	  (date_dos2unix): added function, copied from the linux
	  kernel
	  (mpio_dentry_get_time): added function, uses (date_dos2unix)

2002-09-11  Markus Germeier  <mager@tzi.de>

	* mpio_tool/mpiosh.c (mpiosh_cmd_mdel): added command mdel

2002-09-11  Markus Germeier  <mager@tzi.de>

	* libmpio/mpio.c (mpio_file_put): 
	  finished support for writing to internal memory